Commit Update Meta Tags

--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta property="og:title" content="Sweeter the Sweetest Site"/>
-    <meta property="og:description" content="Are you looking for me"/>
+    <meta property="og:description" content="Are you looking for me ?"/>
     <meta property="og:image" content="{{ url_for('static', filename='ogimage.jpg') }}"/>
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='logo.png') }}" type="image/x-icon"/>
